li tag chaged to div in calendar partial

--- a/assets/views/instant_calendar/_calendar.erb
+++ b/assets/views/instant_calendar/_calendar.erb
@@ -6,7 +6,7 @@
 <% first_day = time.beginning_of_month %>
 <% n = Time.days_in_month(time.month,time.year)%>
 
-<li id="calendar">
+<div id="calendar">
 				<div id="calendar_wrap">
 					<table summary="Calendar">
 						<caption>
@@ -67,4 +67,4 @@
 
 				</table>
 				</div>
-			</li>
+			</div>
